--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,218 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Antecipação Saque Aniversário: Empréstimo com o FGTS</title>
+    <link rel="stylesheet" href="./css/base.css" />
+    <script type="text/javascript" src="./js/main.js"></script>
+    <!-- Dev -->
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <!-- Prod -->
+    <!-- <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script> -->
   </head>
   <body>
-    <h1>Teste</h1>
+    <main id="app">
+      <section id="head-land" class="div-img">
+        <h1>
+          ANTECIPE SUAS PARCELAS DO SEU <span>SAQUE ANIVERSÁRIO FGTS</span>
+        </h1>
+        <h2>
+          <span>Empréstimo</span> com Garantia do Saque Aniversário do FGTS
+        </h2>
+      </section>
+      <section id="explain" class="intersection">
+        <div class="sideborder">
+          <div class="color-box"></div>
+          <h2>O que é Empréstimo com Garantia do Saque Aniversário do FGTS?</h2>
+          <p class="format-text">
+            O Empréstimo com Garantia do Saque Aniversário do FGTS é uma
+            modalidade de crédito que possibilita a você, que optou pelo saque
+            aniversário, antecipar parte do saldo disponível na(s) conta(s)
+            vinculada(s) do FGTS, anualmente, no mês de seu aniversário.
+          </p>
+        </div>
+      </section>
+      <section id="know-how" class="div-img">
+        <h2>Empréstimo pessoal <span>FGTS</span></h2>
+        <h4>
+          É uma <span>modalidade de empréstimo</span> que faz a antecipação de 7
+          anos do seu saque-aniversário.
+          <span
+            >É um dinheiro fácil e rápido para dar aquele gás na vida
+            financeira.</span
+          >
+        </h4>
+      </section>
+      <section id="benefits" class="intersection">
+        <h2>Vantagens</h2>
+        <article class="info-know-how">
+          <h3>Não compromete sua renda mensal</h3>
+          <p class="format-text">
+            O pagamento das parcelas do empréstimo é realizado mediante o débito
+            direto na(s) conta(s) vinculada(s) do FGTS, anualmente, no mês do
+            seu aniversário.
+          </p>
+        </article>
+        <article class="info-know-how">
+          <h3>Quem pode contratar?</h3>
+          <p class="format-text">
+            Todos que tiverem um saldo no fundo de garantia (FGTS) acima de
+            R$400,00, inclusive negativados e quem já contratou esse empréstimo
+            antes.
+          </p>
+        </article>
+        <article class="info-know-how">
+          <h3>Vale a pena?</h3>
+          <p class="format-text">
+            Sim! Esse empréstimo possui a garantia do FGTS e por isso as taxas
+            são bem mais baixas que boa parte dos créditos disponíveis no
+            mercado.
+          </p>
+        </article>
+        <article class="info-know-how">
+          <h3>Como funciona o pagamento?</h3>
+          <p class="format-text">
+            Você não precisa se preocupar com as parcelas, pois são descontadas
+            anualmente direto do seu saldo FGTS.
+          </p>
+        </article>
+      </section>
+      <section id="fgts-explanation">
+        <h2>
+          <span>É fácil aderir o empréstimo</span> com garantia do Saque
+          Aniversário FGTS
+        </h2>
+        <h4>Em apenas 5 passos você consegue aderir a modalidade</h4>
+        <!-- <div>Add carousel ensinando a fazer uma conta do app do FGTS</div> -->
+      </section>
+      <section id="questions">
+        <img src="./images/logo.jpg" alt="Logo da Cred Fácil" width="300" />
+        <h2>Dúvidas Frequentes?</h2>
+        <section>
+          <button>O que é o Saque Aniversário do FGTS?</button>
+          <article>
+            <p class="format-text">
+              Com a publicação da Lei 13.932 de 2019, o Governo Federal alterou
+              as regras relativas ao saque do FGTS, incluindo a sistemática do
+              saque aniversário como nova opção oferecida ao trabalhador, em
+              alternativa à sistemática de saque por rescisão do contrato de
+              trabalho, que permitirá a retirada de parte do saldo da conta
+              vinculada do FGTS, anualmente, no mês do seu aniversário.
+            </p>
+          </article>
+        </section>
+        <section>
+          <button>Quais as vantagens desse empréstimo?</button>
+          <article>
+            <p class="format-text">
+              O Empréstimo com Garantia do Saque Aniversário do FGTS é uma
+              modalidade de crédito que possibilita à você, que optou pelo saque
+              aniversário, antecipar o valor das parcelas que, de outra forma,
+              seriam sacadas anualmente, no mês do seu aniversário.
+            </p>
+          </article>
+        </section>
+        <section>
+          <button>
+            Quem pode contratar o Empréstimo com Garatia do Saque Aniversário
+            FGTS?
+          </button>
+          <article>
+            <p class="format-text">
+              Todos os trabalhadores que possuam saldo disponível em sua(s)
+              conta(s) vinculada(s) do FGTS (contas ativas e inativas), que
+              tenham optado pela modalidade do saque aniversário.
+            </p>
+          </article>
+        </section>
+        <section>
+          <button>
+            Qual o valor do FGTS que será bloqueado na contratação da operação?
+          </button>
+          <article>
+            <p class="format-text">
+              Será bloqueado o valor correspondente ao percentual do(s) saldo(s)
+              da(s) conta(s) vinculada(s) do FGTS, em valor suficiente para,
+              aplicada a alíquota correspondente ao saldo da conta disponível na
+              data da operação e acrescida à parcela adicional, estabelecidas no
+              Anexo à Lei nº 8.036, de 1990, ou em suas alterações posteriores,
+              seja possível a realização do(s) saque(s) aniversário em valor
+              equivalente ao dado em garantia na contratação do empréstimo.
+            </p>
+          </article>
+        </section>
+        <section>
+          <button>
+            Como eu sei qual valor está disponível para antecipar?
+          </button>
+          <section>
+            <p class="format-text">
+              Ao entrar no aplicativo do FGTS, você consegue visualizar o valor
+              disponível para saque em cada ano, para então realizar a
+              antecipação do seu saque aniversário.
+            </p>
+          </section>
+        </section>
+        <section>
+          <button>
+            Exite algum período no qual o cliente não consegue efetivar a
+            contratação?
+          </button>
+          <article>
+            <p class="format-text">
+              Algumas movimentações nas contas vinculadas do FGTS podem impedir
+              a conclusão da contratação do seu empréstimo no dia ou por um
+              período determinado. Isso acontece quando existir algum comando de
+              movimentação sendo efetuado na conta do FGTS, seja por algum
+              crédito provisionado pelo empregador, fluxo de saque de outra
+              modalidade em processamento ou qualquer ajuste de saldo pelo FGTS.
+              Quando alguma dessas movimentações ocorrerem, o cliente precisará
+              aguardar a finalização para efetivar a contratação, tendo em vista
+              que o sistema só permite o correto bloqueio da garantia quando o
+              saldo estiver totalmente acessível para efetivação.
+            </p>
+          </article>
+        </section>
+        <section>
+          <button>
+            Se eu contratar o Empréstimo com Garantia do Saque Aniversário FGTS,
+            terei a possibilidade de contratar outras linhas de crédito?
+          </button>
+          <article>
+            <p class="format-text">
+              Sim, o Empréstimo com Garantia do Saque Aniversário FGTS não
+              compromete outras linhas de crédito, como por exemplo, o
+              Empréstimo Consignado.
+            </p>
+          </article>
+        </section>
+        <section>
+          <button>
+            Como serão pagas as parcelas do Empréstimo com Garantia do Saque
+            Aniversário FGTS?
+          </button>
+          <article>
+            <p class="format-text">
+              A amortização do empréstimo ocorrerá através de parcelas anuais
+              utilizando o valor disponível (e bloqueado) pela sistemática do
+              Saque Aniversário, não comprometendo a renda mensal.
+            </p>
+          </article>
+        </section>
+      </section>
+    </main>
+
+    <!-- <script type="application/javascript">
+      const app = {
+        setup() {
+          const mensagem = "Olá mundo";
+
+          return {
+            mensagem,
+          };
+        },
+      };
+
+      Vue.createApp(app).mount("#app");
+    </script> -->
   </body>
 </html>
