Add icones fotn awesome

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <title>Antecipação Saque Aniversário: Empréstimo com o FGTS</title>
     <link rel="stylesheet" href="./css/base.css" />
     <script type="text/javascript" src="./js/main.js"></script>
-    <!-- Dev -->
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <!-- Prod -->
-    <!-- <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script> -->
+    <script
+      src="https://kit.fontawesome.com/4ccb946438.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <main id="app">
@@ -48,6 +48,9 @@
       <section id="benefits" class="intersection">
         <h2>Vantagens</h2>
         <article class="info-know-how">
+          <span class="icon">
+            <i class="fa-solid fa-dollar-sign"></i>
+          </span>
           <h3>Não compromete sua renda mensal</h3>
           <p class="format-text">
             O pagamento das parcelas do empréstimo é realizado mediante o débito
@@ -56,6 +59,9 @@
           </p>
         </article>
         <article class="info-know-how">
+          <span class="icon">
+            <i class="fa-solid fa-user"></i>
+          </span>
           <h3>Quem pode contratar?</h3>
           <p class="format-text">
             Todos que tiverem um saldo no fundo de garantia (FGTS) acima de
@@ -64,6 +70,9 @@
           </p>
         </article>
         <article class="info-know-how">
+          <span class="icon">
+            <i class="fa-solid fa-lightbulb"></i>
+          </span>
           <h3>Vale a pena?</h3>
           <p class="format-text">
             Sim! Esse empréstimo possui a garantia do FGTS e por isso as taxas
@@ -72,6 +81,9 @@
           </p>
         </article>
         <article class="info-know-how">
+          <span class="icon">
+            <i class="fa-solid fa-credit-card"></i>
+          </span>
           <h3>Como funciona o pagamento?</h3>
           <p class="format-text">
             Você não precisa se preocupar com as parcelas, pois são descontadas
