--- a/public/index.html
+++ b/public/index.html
@@ -102,8 +102,13 @@
       <section id="questions">
         <img src="./images/logo.jpg" alt="Logo da Cred Fácil" width="300" />
         <h2>Dúvidas Frequentes?</h2>
-        <section>
-          <button>O que é o Saque Aniversário do FGTS?</button>
+        <section class="accordeon">
+          <button>
+            <span>
+              <i class="fa-solid fa-chevron-down"></i>
+            </span>
+            <h2>O que é o Saque Aniversário do FGTS?</h2>
+          </button>
           <article>
             <p class="format-text">
               Com a publicação da Lei 13.932 de 2019, o Governo Federal alterou
@@ -115,8 +120,13 @@
             </p>
           </article>
         </section>
-        <section>
-          <button>Quais as vantagens desse empréstimo?</button>
+        <section class="accordeon">
+          <button>
+            <span>
+              <i class="fa-solid fa-chevron-down"></i>
+            </span>
+            <h2>Quais as vantagens desse empréstimo?</h2>
+          </button>
           <article>
             <p class="format-text">
               O Empréstimo com Garantia do Saque Aniversário do FGTS é uma
@@ -126,10 +136,15 @@
             </p>
           </article>
         </section>
-        <section>
+        <section class="accordeon">
           <button>
-            Quem pode contratar o Empréstimo com Garatia do Saque Aniversário
-            FGTS?
+            <span>
+              <i class="fa-solid fa-chevron-down"></i>
+            </span>
+            <h2>
+              Quem pode contratar o Empréstimo com Garatia do Saque Aniversário
+              FGTS?
+            </h2>
           </button>
           <article>
             <p class="format-text">
@@ -139,9 +154,15 @@
             </p>
           </article>
         </section>
-        <section>
+        <section class="accordeon">
           <button>
-            Qual o valor do FGTS que será bloqueado na contratação da operação?
+            <span>
+              <i class="fa-solid fa-chevron-down"></i>
+            </span>
+            <h2>
+              Qual o valor do FGTS que será bloqueado na contratação da
+              operação?
+            </h2>
           </button>
           <article>
             <p class="format-text">
@@ -155,9 +176,12 @@
             </p>
           </article>
         </section>
-        <section>
+        <section class="accordeon">
           <button>
-            Como eu sei qual valor está disponível para antecipar?
+            <span>
+              <i class="fa-solid fa-chevron-down"></i>
+            </span>
+            <h2>Como eu sei qual valor está disponível para antecipar?</h2>
           </button>
           <section>
             <p class="format-text">
@@ -167,10 +191,15 @@
             </p>
           </section>
         </section>
-        <section>
+        <section class="accordeon">
           <button>
-            Exite algum período no qual o cliente não consegue efetivar a
-            contratação?
+            <span>
+              <i class="fa-solid fa-chevron-down"></i>
+            </span>
+            <h2>
+              Exite algum período no qual o cliente não consegue efetivar a
+              contratação?
+            </h2>
           </button>
           <article>
             <p class="format-text">
@@ -187,10 +216,15 @@
             </p>
           </article>
         </section>
-        <section>
+        <section class="accordeon">
           <button>
-            Se eu contratar o Empréstimo com Garantia do Saque Aniversário FGTS,
-            terei a possibilidade de contratar outras linhas de crédito?
+            <span>
+              <i class="fa-solid fa-chevron-down"></i>
+            </span>
+            <h2>
+              Se eu contratar o Empréstimo com Garantia do Saque Aniversário
+              FGTS, terei a possibilidade de contratar outras linhas de crédito?
+            </h2>
           </button>
           <article>
             <p class="format-text">
@@ -200,10 +234,15 @@
             </p>
           </article>
         </section>
-        <section>
+        <section class="accordeon">
           <button>
-            Como serão pagas as parcelas do Empréstimo com Garantia do Saque
-            Aniversário FGTS?
+            <span>
+              <i class="fa-solid fa-chevron-down"></i>
+            </span>
+            <h2>
+              Como serão pagas as parcelas do Empréstimo com Garantia do Saque
+              Aniversário FGTS?
+            </h2>
           </button>
           <article>
             <p class="format-text">
@@ -215,19 +254,5 @@
         </section>
       </section>
     </main>
-
-    <!-- <script type="application/javascript">
-      const app = {
-        setup() {
-          const mensagem = "Olá mundo";
-
-          return {
-            mensagem,
-          };
-        },
-      };
-
-      Vue.createApp(app).mount("#app");
-    </script> -->
   </body>
 </html>
