Add efeito accordeon

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Antecipação Saque Aniversário: Empréstimo com o FGTS</title>
     <link rel="stylesheet" href="./css/base.css" />
-    <script type="text/javascript" src="./js/main.js"></script>
     <script
       src="https://kit.fontawesome.com/4ccb946438.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
     <main id="app">
@@ -103,7 +106,7 @@
         <img src="./images/logo.jpg" alt="Logo da Cred Fácil" width="300" />
         <h2>Dúvidas Frequentes?</h2>
         <section class="accordeon">
-          <button>
+          <button class="btn-dropdown">
             <span>
               <i class="fa-solid fa-chevron-down"></i>
             </span>
@@ -121,7 +124,7 @@
           </article>
         </section>
         <section class="accordeon">
-          <button>
+          <button class="btn-dropdown">
             <span>
               <i class="fa-solid fa-chevron-down"></i>
             </span>
@@ -137,7 +140,7 @@
           </article>
         </section>
         <section class="accordeon">
-          <button>
+          <button class="btn-dropdown">
             <span>
               <i class="fa-solid fa-chevron-down"></i>
             </span>
@@ -155,7 +158,7 @@
           </article>
         </section>
         <section class="accordeon">
-          <button>
+          <button class="btn-dropdown">
             <span>
               <i class="fa-solid fa-chevron-down"></i>
             </span>
@@ -177,22 +180,22 @@
           </article>
         </section>
         <section class="accordeon">
-          <button>
+          <button class="btn-dropdown">
             <span>
               <i class="fa-solid fa-chevron-down"></i>
             </span>
             <h2>Como eu sei qual valor está disponível para antecipar?</h2>
           </button>
-          <section>
+          <article>
             <p class="format-text">
               Ao entrar no aplicativo do FGTS, você consegue visualizar o valor
               disponível para saque em cada ano, para então realizar a
               antecipação do seu saque aniversário.
             </p>
-          </section>
+          </article>
         </section>
         <section class="accordeon">
-          <button>
+          <button class="btn-dropdown">
             <span>
               <i class="fa-solid fa-chevron-down"></i>
             </span>
@@ -217,7 +220,7 @@
           </article>
         </section>
         <section class="accordeon">
-          <button>
+          <button class="btn-dropdown">
             <span>
               <i class="fa-solid fa-chevron-down"></i>
             </span>
@@ -235,7 +238,7 @@
           </article>
         </section>
         <section class="accordeon">
-          <button>
+          <button class="btn-dropdown">
             <span>
               <i class="fa-solid fa-chevron-down"></i>
             </span>
@@ -254,5 +257,6 @@
         </section>
       </section>
     </main>
+    <script type="text/javascript" src="./js/main.js"></script>
   </body>
 </html>
