--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Antecipação Saque Aniversário: Empréstimo com o FGTS</title>
-    <link rel="stylesheet" href="./css/base.css" />
+    <link rel="stylesheet" rel="preload" href="./css/base.css" />
     <script
+      rel="preload"
       src="https://kit.fontawesome.com/4ccb946438.js"
       crossorigin="anonymous"
     ></script>
@@ -103,7 +104,12 @@
         <!-- <div>Add carousel ensinando a fazer uma conta do app do FGTS</div> -->
       </section>
       <section id="questions">
-        <img src="./images/logo.jpg" alt="Logo da Cred Fácil" width="300" />
+        <img
+          src="./images/logo.avif"
+          alt="Logo da Cred Fácil"
+          width="300"
+          height="300"
+        />
         <h2>Dúvidas Frequentes?</h2>
         <section class="accordeon">
           <button class="btn-dropdown">
