--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Daniel Moura Barros" />
+    <meta
+      name="description"
+      content="Antecipe suas parcelas do seu saque aniversário FGTS. Empréstimos com garantia do Saque Aniversário do FGTS."
+    />
+    <meta
+      name="keywords"
+      content="fgts, empréstimo, saque, aniversario, crédito, antecipação, garantia, pessoal, saque-aniversário, fundo, garantia"
+    />
+    <meta http-equiv="content-language" content="pt-br" />
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <title>Antecipação Saque Aniversário: Empréstimo com o FGTS</title>
     <link rel="stylesheet" rel="preload" href="./css/base.css" />
     <script
