add novas metatags

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,29 @@
       name="keywords"
       content="fgts, empréstimo, saque, aniversario, crédito, antecipação, garantia, pessoal, saque-aniversário, fundo, garantia"
     />
+
     <meta http-equiv="content-language" content="pt-br" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+
+    <meta
+      property="og:site_name"
+      content="Empréstimo pessoal FGTS - CredFácil"
+    />
+    <meta
+      property="og:title"
+      content="Antecipação Saque Aniversário: Empréstimo com o FGTS"
+    />
+    <meta
+      property="og:description"
+      content="Antecipe suas parcelas do seu saque aniversário FGTS. Empréstimos com garantia do Saque Aniversário do FGTS."
+    />
+    <meta
+      property="og:image"
+      itemprop="image"
+      content="https://i.imgur.com/21aXRWA.jpg"
+    />
+    <meta property="og:type" content="website" />
+
     <title>Antecipação Saque Aniversário: Empréstimo com o FGTS</title>
     <link rel="stylesheet" rel="preload" href="./css/base.css" />
     <script
