--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,14 @@
   <body>
     <main id="app">
       <section id="head-land" class="div-img">
+        <span class="img-container">
+          <img
+            src="./images/logo.avif"
+            alt="Logo CredFácil"
+            width="150"
+            height="150"
+          />
+        </span>
         <h1>
           ANTECIPE SUAS PARCELAS DO SEU <span>SAQUE ANIVERSÁRIO FGTS</span>
         </h1>
@@ -69,6 +77,13 @@
             vinculada(s) do FGTS, anualmente, no mês de seu aniversário.
           </p>
         </div>
+        <button id="wpp-simulation">
+          <a
+            style="text-decoration: none; color: #fff"
+            href="https://wa.me/558173166645?text=Gostaria%20de%20realizar%20uma%20simulação%20de%20Empréstimo%20com%20Garantia%20do%20Saque%20Aniversário%20do%20FGTS."
+            ><i class="fa-brands fa-whatsapp"></i> Simule agora mesmo!</a
+          >
+        </button>
       </section>
       <section id="know-how" class="div-img">
         <h2>Empréstimo pessoal <span>FGTS</span></h2>
@@ -294,6 +309,27 @@
           </article>
         </section>
       </section>
+      <footer>
+        <small
+          >A Geo Credi BNK – CNPJ: 22.723.882/0001-56 é uma plataforma digital
+          que atua como correspondente bancário para facilitar o processo de
+          contratação de empréstimos. Como correspondente bancário seguimos as
+          diretrizes do Banco Central do Brasil, nos termos da Resolução nº.
+          3.954, de 24 de fevereiro de 2011. Toda avaliação de crédito será
+          realizada conforme a política de crédito da Instituição Financeira
+          escolhida pelo usuário. Antes da contratação de qualquer serviço
+          através de nossos parceiros, você receberá todas as condições e
+          informações relativas ao produto a ser contratado, de forma completa e
+          transparente. As taxas de juros, margem consignável e prazo de
+          pagamento praticados nos empréstimos com consignação em pagamento dos
+          Governos Federais, Estaduais e INSS observam as determinações de cada
+          convênio, bem como a política de crédito da Instituição Financeira a
+          ser utilizada.</small
+        >
+      </footer>
+      <a id="wpp-fixed-link" href="https://wa.me/558173166645">
+        <img src="./images/whatsapp.png" alt="Whatsapp Logo" />
+      </a>
     </main>
     <script type="text/javascript" src="./js/main.js"></script>
   </body>
