--- a/public/index.html
+++ b/public/index.html
@@ -309,6 +309,14 @@
           </article>
         </section>
       </section>
+      <a id="wpp-fixed-link" href="https://wa.me/558173166645">
+        <img
+          src="./images/whatsapp.png"
+          alt="Whatsapp Logo"
+          height="42"
+          width="42"
+        />
+      </a>
       <footer>
         <small
           >A Geo Credi BNK – CNPJ: 22.723.882/0001-56 é uma plataforma digital
@@ -320,16 +328,14 @@
           escolhida pelo usuário. Antes da contratação de qualquer serviço
           através de nossos parceiros, você receberá todas as condições e
           informações relativas ao produto a ser contratado, de forma completa e
-          transparente. As taxas de juros, margem consignável e prazo de
-          pagamento praticados nos empréstimos com consignação em pagamento dos
-          Governos Federais, Estaduais e INSS observam as determinações de cada
-          convênio, bem como a política de crédito da Instituição Financeira a
-          ser utilizada.</small
+          transparente. <br /><br />
+          As taxas de juros, margem consignável e prazo de pagamento praticados
+          nos empréstimos com consignação em pagamento dos Governos Federais,
+          Estaduais e INSS observam as determinações de cada convênio, bem como
+          a política de crédito da Instituição Financeira a ser
+          utilizada.</small
         >
       </footer>
-      <a id="wpp-fixed-link" href="https://wa.me/558173166645">
-        <img src="./images/whatsapp.png" alt="Whatsapp Logo" />
-      </a>
     </main>
     <script type="text/javascript" src="./js/main.js"></script>
   </body>
