--- a/public/index.html
+++ b/public/index.html
@@ -149,12 +149,43 @@
         </article>
       </section>
       <section id="fgts-explanation">
-        <h2>
+        <h2 class="h1">
           <span>É fácil aderir o empréstimo</span> com garantia do Saque
           Aniversário FGTS
         </h2>
         <h4>Em apenas 5 passos você consegue aderir a modalidade</h4>
-        <!-- <div>Add carousel ensinando a fazer uma conta do app do FGTS</div> -->
+        <div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel" style="width: 100%;">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="d-flex justify-content-center" style="width: 100%">
+                <img src="./images/slider1.png" alt="Celular exibindo tela de login do app do FGTS." height="320" width="220">
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="d-flex justify-content-center" style="width: 100%">
+                <img src="./images/slider2.png" alt="Celular exibindo tela de escolha para saque aniversário no app do FGTS." height="320" width="220">
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="d-flex justify-content-center" style="width: 100%">
+                <img src="./images/slider3.png" alt="Celular exibindo tela para autorização de consulta de saldo por instituição financeira." height="320" width="220">
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="d-flex justify-content-center" style="width: 100%">
+                <img src="./images/slider4.png" alt="Celular exibindo fim do processo de autorização." height="320" width="220">
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
       </section>
       <section id="questions">
         <img
